# automatt

./: README.md  automatt.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
discord-bot/: bot.py
